--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -22,20 +22,20 @@
 
     //Tamaño
         //Variable                      //Valor
-        $font-h1                :       64;
-        $font-h2                :       32;
-        $font-h3                :       24;
-        $font-h4                :       20;
-        $font-p                 :       16;
-        $font-s                 :       12;
+        $font-h1                :       4rem;
+        $font-h2                :       2rem;
+        $font-h3                :       1.5rem;
+        $font-h4                :       1.25rem;
+        $font-p                 :       1rem;
+        $font-s                 :       .75rem;
 
 
 //FORMULARIO PERFIL
-        $form-width             :       800px;
-        $form-field-width       :       320px;
-        $form-password-width    :       200px;
-        $form-button-width      :       92px;
-        $form-gender-width      :       170px;
-        $form-card-field-width  :       455px;
-        $form-spacing-horizontal:       20px;
-        $form-spacing-vertical  :       25px;
+        $form-width             :       50rem;
+        $form-field-width       :       20rem;
+        $form-password-width    :       12.5rem;
+        $form-button-width      :       5.75rem;
+        $form-gender-width      :       10.625rem;
+        $form-card-field-width  :       28.4375rem;
+        $form-spacing-horizontal:       1.25rem;
+        $form-spacing-vertical  :       1.5625rem;
