--- a/src/sass/pages/_news.scss
+++ b/src/sass/pages/_news.scss
@@ -1,41 +1,43 @@
-main {
-
-
-  article {
+.noticias {
+  padding: 0;
+  background-color: $color-secondarybg;
+  .news {
+    height: 65%;
     width: 100%;
-  
-    .section-banner {
-      height: 656px;
-      width: 100%;
-      position: relative;
+    background-color: $color-background;
+    padding: 15px;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
 
-      img {
-        
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-bottom: 8px solid rgba($color: $color-main, $alpha: 1.0);
-      }
     
-      .section-textarea {
-        position: absolute;
-        bottom: 0;
-        height: 25%;
-        width: 100%;
-        margin-bottom: 18px;
-        background-color: rgba($color: $color-background, $alpha: 0.5);
+    img {
+      
+      top: 0;
+      left: 0;
+      width: 65%;
+      height: 60%;
 
-        
-        p {
-          padding: 20px;
-          margin: 0;
-          color: $color-secondary;
+      border-bottom: 8px solid rgba($color: $color-main, $alpha: 1.0);
+    }
+  
+    .section-textarea {
+      position: absolute;
+      height: 25%;
+      width: 100%;
+      margin-bottom: 18px;
+      background-color: rgba($color: red, $alpha: 0.5);
 
-        }
+      
+      p {
+        padding: 1.25rem;
+        margin: 0;
+        color: $color-secondary;
+
       }
     }
+  }
 
     .section-menu {
 
@@ -56,23 +58,23 @@ main {
 
         .item {
         
-          width: 200px;
-          height: 170px;
+          width: 12.5rem;
+          height: 10.625rem;
           margin: 0;
-          padding: 15px;
+          padding: .9375rem;
           background: linear-gradient(to bottom, 
             $color-background, 
             $color-background, 
             $color-background, 
             $color-background, 
             $color-secondarybg);
-          border-bottom: 20px solid $color-main;
-          border-radius: 8px;
+          border-bottom: 1.25rem solid $color-main;
+          border-radius: .5rem;
           display: flex;
           flex-direction: column;
           justify-content: flex-start;
           align-items: center;
-          box-shadow: 6px 6px 6px rgba($color: #000000, $alpha: 1.0);
+          box-shadow: .375rem .375rem .375rem rgba($color: #000000, $alpha: 1.0);
           flex-shrink: 0; //se reduce de tamaño automáticamente si hay espacio insuficiente
           
 
@@ -94,21 +96,21 @@ main {
 
             margin: 0;
             
-            padding: 0px 0px 10px 0px;
+            padding: 0 0 10 0;
             color: $color-main;
             font-family: $font-family;
             font-style: normal;
             font-weight: $font-regular;
             font-size: $font-h3;
-            text-shadow: 2px 4px 4px rgba($color: #000000, $alpha: 0.5);
+            text-shadow: .125rem .25rem .25rem rgba($color: #000000, $alpha: 0.5);
             
 
 
           }
 
           .inner-item {
-            width: 80px;
-            height: 80px;
+            width: 5rem;
+            height: 5rem;
             background-color: $color-main;
             display: flex;
             justify-content: center;
@@ -121,16 +123,15 @@ main {
         }
 
         .submenu {
-          width: 400px;
-          height: 170px;
+          width: 25rem;
+          height: 10.625rem;
           margin: 0;
 
         }
     
         .item + .item {
-          margin-left: 20px;
+          margin-left: 1.25rem;
         }
       }
     }
-  }
 }
